--- a/.env.template
+++ b/.env.template
@@ -12,17 +12,22 @@ DEFOG_DBPORT="5432"
 DEFOG_DATABASE="postgres"
 DEFOG_DBUSER="postgres"
 DEFOG_DBPASSWORD="postgres"
-IMPORTED_TABLES_DBNAME="imported_tables" # used to store the imported tables data. should be different from DEFOG_DATABASE
-REDIS_INTERNAL_PORT="6379"  # for accessing redis from inside the docker network
+# used to store the imported tables data. should be different from DEFOG_DATABASE
+IMPORTED_TABLES_DBNAME="imported_tables"
+# for accessing redis from inside the docker network
+REDIS_INTERNAL_PORT="6379"
 PYTHONUNBUFFERED="true"
-LOG_LEVEL="info" # set to debug if you want to see debug logs
+# set to debug if you want to see debug logs
+LOG_LEVEL="info"
 LLM_CALLS_URL="https://api.defog.ai/agent_endpoint"
 DEFOG_BASE_URL="https://api.defog.ai"
 DEFOG_GENERATE_URL="https://api.defog.ai/generate_query_chat"
 RESEND_API_KEY=""
 FROM_EMAIL=""
-LLM_SERVER_ENDPOINT="" # delete this from .env if want to use the OpenAI server
-LLM_MODEL_NAME=""  # delete this from .env if want to use the OpenAI model
+# delete this from .env if want to use the OpenAI server
+LLM_SERVER_ENDPOINT=""
+# delete this from .env if want to use the OpenAI model
+LLM_MODEL_NAME=""
 STRIPE_ACCOUNT_ID=""
 STRIPE_CLIENT_SECRET=""
 GOOGLE_ANALYTICS_CREDS_PATH=""
@@ -36,3 +41,5 @@ DELETE_EXISTING_TOOLS="no"
 RABBITMQ_HOST="agents-rabbitmq"
 ANALYZE_DATA="no"
 ANALYZE_DATA_MODEL="defog"
+# change this to "yes" if you want to enable the Oracle
+ORACLE_ENABLED="no"
