--- a/.env.template
+++ b/.env.template
@@ -43,3 +43,5 @@ ANALYZE_DATA="no"
 ANALYZE_DATA_MODEL="defog"
 # change this to "yes" if you want to enable the Oracle
 ORACLE_ENABLED="no"
+BEDROCK_MODEL="meta.llama3-70b-instruct-v1:0"
+PYTHONPATH="backend"
