updated env template

--- a/.env.template
+++ b/.env.template
@@ -45,3 +45,15 @@ ANALYZE_DATA_MODEL="defog"
 ORACLE_ENABLED="no"
 BEDROCK_MODEL="meta.llama3-70b-instruct-v1:0"
 PYTHONPATH="backend"
+
+# For users that want to use OpenAI for data analysis
+# ANALYZE_DATA="yes"
+# ANALYZE_DATA_MODEL="openai"
+# OPENAI_API_KEY="..."
+
+# For users that want to use Bedrock for data analysis
+# ANALYZE_DATA="yes"
+# ANALYZE_DATA_MODEL="bedrock"
+# AWS_ACCESS_KEY_ID="..."
+# AWS_SECRET_ACCESS_KEY="..."
+# AWS_DEFAULT_REGION="..."
