--- a/nginx/nginx_local.conf
+++ b/nginx/nginx_local.conf
@@ -26,7 +26,7 @@ http {
     }
 
     # for the /doc, /extract-metadata, /manage-users, /msal_redirect locations, serve via static server
-    location ~* /(doc|log-in|extract-metadata|view-notebooks|manage-users|msal_redirect|query-data|align-model|check-readiness|manage-tools|oracle-frontend|view-feedback|update-bedrock-params|update-openai-params) {
+    location ~* /(doc|log-in|extract-metadata|view-notebooks|manage-users|msal_redirect|query-data|align-model|test-regression|manage-tools|oracle-frontend|view-feedback|update-bedrock-params|update-openai-params) {
       root /var/www/html;
       index index.html index.htm;
       add_header Content-Type text/html;
