--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@azure/msal-browser": "^3.7.1",
     "@azure/msal-react": "^2.0.10",
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "^0.0.71",
+    "@defogdotai/agents-ui-components": "^0.0.72",
     "@dotlottie/react-player": "^1.6.12",
     "@marsidev/react-turnstile": "^0.4.1",
     "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "antd": "^5.12.8",
     "chroma-js": "^2.4.2",
     "d3": "^7.8.5",
@@ -34,12 +36,14 @@
     "sass": "^1.69.7",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
+    "tiptap-markdown": "^0.8.10",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.17",
     "@playwright/test": "^1.47.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.11.6",
     "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
