add raw analysis hiding

--- a/.env.template
+++ b/.env.template
@@ -59,3 +59,13 @@ PYTHONPATH="backend"
 # AWS_ACCESS_KEY_ID="..."
 # AWS_SECRET_ACCESS_KEY="..."
 # AWS_DEFAULT_REGION="..."
+
+# set to "yes" if you want to hide the SQL/Code tab for non-admin users
+HIDE_SQL_TAB_FOR_NON_ADMIN=
+
+# set to "yes" if you want to hide the preview data and view data structure tabs for non-admin users
+HIDE_PREVIEW_TABS_FOR_NON_ADMIN=
+
+# comma separated list of chart names. all lowercase.
+# can be: line, bar, scatter, histogram, boxplot
+HIDDEN_CHARTS_FOR_NON_ADMIN=
