--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,6 +69,12 @@ services:
 
       # for users that want to use OpenAI for narrative generation
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+
+      # front end non-admin config
+      - HIDE_SQL_TAB_FOR_NON_ADMIN=${HIDE_SQL_TAB_FOR_NON_ADMIN}
+      - HIDE_PREVIEW_TABS_FOR_NON_ADMIN=${HIDE_PREVIEW_TABS_FOR_NON_ADMIN}
+      - HIDDEN_CHARTS_FOR_NON_ADMIN=${HIDDEN_CHARTS_FOR_NON_ADMIN}
+      - HIDE_RAW_ANALYSIS_FOR_NON_ADMIN=${HIDE_RAW_ANALYSIS_FOR_NON_ADMIN}
     build:
       context: .
       dockerfile: dockerfile.agents-python-server
