--- a/.env.template
+++ b/.env.template
@@ -69,3 +69,6 @@ HIDE_PREVIEW_TABS_FOR_NON_ADMIN=
 # comma separated list of chart names. all lowercase.
 # can be: line, bar, scatter, histogram, boxplot
 HIDDEN_CHARTS_FOR_NON_ADMIN=
+
+# set to "yes" if you want to hide the raw analysis tab for non-admin users
+HIDE_RAW_ANALYSIS_FOR_NON_ADMIN=
