fix vs settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,5 @@
   },
   "eslint.validate": ["javascript", "javascriptreact"],
   "eslint.workingDirectories": ["./frontend"],
-  "tailwindCSS.experimental.classRegex": ["class:\\s*?[\"'`]([^\"'`]*).*?,"],
-  "python.languageServer": "None"
+  "tailwindCSS.experimental.classRegex": ["class:\\s*?[\"'`]([^\"'`]*).*?,"]
 }
