suppress nginx logs

--- a/nginx/nginx_local.conf
+++ b/nginx/nginx_local.conf
@@ -6,6 +6,9 @@ http {
     listen 80 default_server;
     listen [::]:80 default_server;
 
+    access_log off;
+    error_log off;
+
     # for the root location, serve via root server
     location = / {
       root /var/www/html;
