--- a/nginx/nginx_prod.conf
+++ b/nginx/nginx_prod.conf
@@ -16,6 +16,9 @@ http {
     listen [::]:443 ssl default_server;
     server_name demo.defog.ai;
 
+    access_log off;
+    error_log off;
+
     ssl_certificate /etc/ssl/certs/defogcert.pem;
     ssl_certificate_key /etc/ssl/private/defogkey.pem;
 
