--- a/.github/workflows/typescript-check.yml
+++ b/.github/workflows/typescript-check.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: "18"
           cache: "npm"
+          cache-dependency-path: "./frontend/package-lock.json"
 
       - name: Install Dependencies
         working-directory: ./frontend
