--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.11.6",
+    "@types/react": "^18.3.16",
     "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.30.0",
