--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,34 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@amcharts/amcharts5": "^5.9.13",
     "@ant-design/icons": "^5.4.0",
-    "@azure/msal-browser": "^3.7.1",
-    "@azure/msal-react": "^2.0.10",
     "@codemirror/lang-sql": "^6.7.0",
     "@defogdotai/agents-ui-components": "^1.0.1",
-    "@dotlottie/react-player": "^1.6.12",
-    "@marsidev/react-turnstile": "^0.4.1",
-    "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "antd": "^5.12.8",
-    "chroma-js": "^2.4.2",
-    "d3": "^7.8.5",
-    "js-base64": "^3.7.7",
     "next": "^13.1.2",
     "next-remove-imports": "^1.0.12",
     "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.2",
     "recharts": "^2.12.7",
     "sass": "^1.69.7",
-    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
-    "tiptap-markdown": "^0.8.10",
-    "uuid": "^9.0.1"
+    "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.17",
