--- a/dockerfile.agents-python-server-export
+++ b/dockerfile.agents-python-server-export
@@ -1,5 +1,5 @@
 # builds image for the agents backend
-FROM python:3.12-slim
+FROM python:3.11-slim
 
 WORKDIR /backend
 
@@ -8,7 +8,8 @@ RUN apt-get update && apt-get install -y python3-pip cmake netcat-openbsd
 
 COPY ./backend /backend
 
-RUN pip install -r /backend/requirements_export.txt && pip install -r /backend/requirements_oracle.txt
+RUN pip install -r /backend/requirements_export.txt
+RUN pip install -r /backend/requirements_oracle.txt
 
 # expose python server port
 EXPOSE 1235
