--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,19 +28,20 @@
     "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.17",
+    "@next/bundle-analyzer": "^13.1.2",
     "@playwright/test": "^1.47.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.11.6",
-    "@types/react": "^18.3.16",
+    "@types/react": "^19.0.0",
     "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.30.0",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^9.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.7.2"
   }
 }
