--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "^1.0.2",
+    "@defogdotai/agents-ui-components": "1.0.4",
     "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
     "@tiptap/core": "^2.10.3",
