add an export just for prs

--- a/.github/workflows/frontend-checks.yml
+++ b/.github/workflows/frontend-checks.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Export Check
         working-directory: ./frontend
-        run: pnpm run export
+        run: pnpm run test-pr-export
