--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "1.0.4",
+    "@defogdotai/agents-ui-components": "1.0.5",
     "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
     "@tiptap/core": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "@types/react-dom": "19.0.2",
     "@uiw/react-codemirror": "^4.23.7",
     "antd": "^5.22.5",
     "chroma-js": "^2.4.2",
@@ -27,8 +28,8 @@
     "next": "15.1.1",
     "next-remove-imports": "^1.0.12",
     "papaparse": "^5.4.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.2",
     "recharts": "^2.15.0",
     "sass": "^1.69.7",
