--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "1.0.5",
+    "@defogdotai/agents-ui-components": "1.0.7",
     "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
     "@tiptap/core": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
-    "@types/react-dom": "19.0.2",
+    "@types/react-dom": "19.0.0",
     "@uiw/react-codemirror": "^4.23.7",
     "antd": "^5.22.5",
     "chroma-js": "^2.4.2",
@@ -28,8 +28,8 @@
     "next": "15.1.1",
     "next-remove-imports": "^1.0.12",
     "papaparse": "^5.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.2",
     "recharts": "^2.15.0",
     "sass": "^1.69.7",
@@ -44,11 +44,10 @@
     "@types/node": "^20.11.6",
     "@types/react": "19.0.2",
     "autoprefixer": "^10.4.19",
-    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.1",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.49",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.3"
   },
