--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "chroma-js": "^2.4.2",
     "d3": "^7.8.5",
     "js-base64": "^3.7.7",
+    "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "next-remove-imports": "^1.0.12",
     "papaparse": "^5.4.1",
