add REDIS_INTERNAL_HOST to env

--- a/.env.template
+++ b/.env.template
@@ -17,6 +17,7 @@ IMPORTED_TABLES_DBNAME="imported_tables"
 # used to store temporary tables for cross-database queries. should be different from DEFOG_DATABASE and IMPORTED_TABLES_DBNAME
 TEMP_TABLES_DBNAME="temp_tables"
 # for accessing redis from inside the docker network
+REDIS_INTERNAL_HOST="agents-redis"
 REDIS_INTERNAL_PORT="6379"
 PYTHONUNBUFFERED="true"
 # set to debug if you want to see debug logs
