fixed variable name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       - DBUSER=${DEFOG_DBUSER:-postgres}
       - DBPASSWORD=${DEFOG_DBPASSWORD:-postgres}
       - IMPORTED_TABLES_DBNAME=${IMPORTED_TABLES_DBNAME:-imported_tables}
-      - REDIS_INTERNAL_HOST=${REDIS_INTERNAL_HOST:-"agents-redis"}
+      - REDIS_INTERNAL_HOST=${REDIS_INTERNAL_HOST:-agents-redis}
       - REDIS_INTERNAL_PORT=${REDIS_INTERNAL_PORT:-6379}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
       - LOG_LEVEL=${LOG_LEVEL:-info}
