--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@defogdotai/agents-ui-components": "1.0.8",
     "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
+    "@sereneinserenade/tiptap-comment-extension": "^0.1.2",
     "@tiptap/core": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
