--- a/.github/workflows/frontend-checks.yml
+++ b/.github/workflows/frontend-checks.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-          token: ${{ secrets.github }}
+          token: ${{ secrets.ACTION_PAT }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
