--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "1.1.23",
+    "@defogdotai/agents-ui-components": "1.1.24",
     "@notionhq/client": "^2.2.14",
     "@react-oauth/google": "^0.12.1",
     "@sereneinserenade/tiptap-comment-extension": "^0.1.2",
@@ -57,7 +57,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.0.2"
+      "@types/react": "19.0.2",
+      "@defogdotai/agents-ui-components": "link:../../agents-ui-components"
     }
   }
 }
