--- a/.env.template
+++ b/.env.template
@@ -72,3 +72,6 @@ HIDDEN_CHARTS_FOR_NON_ADMIN=
 
 # set to "yes" if you want to hide the raw analysis tab for non-admin users
 HIDE_RAW_ANALYSIS_FOR_NON_ADMIN=
+
+# local development
+PROD="no"
