--- a/dockerfile.agents-python-server
+++ b/dockerfile.agents-python-server
@@ -5,12 +5,10 @@ WORKDIR /backend
 
 RUN apt-get update && apt-get install -y python3-pip netcat-openbsd
 
-COPY ./backend/requirements_export.txt /root/requirements_export.txt
-COPY ./backend/requirements_oracle.txt /root/requirements_oracle.txt
+COPY ./backend/requirements.txt /root/requirements.txt
 
 RUN pip install --upgrade pip setuptools && \
-  pip install -r /root/requirements_export.txt && \
-  pip install -r /root/requirements_oracle.txt
+  pip install -r /root/requirements.txt
 
 # expose python server port
 EXPOSE 1235
