--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 # replace the values here with your own
+SALT="default_salt"
 DEFOG_API_KEYS=123,456
 DEFOG_API_KEY_NAMES="Dataset 1,Dataset 2"
 GOOGLE_CLIENT_ID=""
