--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 boto3
 colorama
-defog==0.66.1
+defog==0.67.1
 fastapi
 google-auth
 httpx
@@ -41,3 +41,8 @@ celery[redis]==5.4.0
 # tests
 pytest
 pytest-asyncio
+
+# llm providers
+openai==1.61.0
+anthropic==0.43.1
+google-genai==0.5.0
