increase allowed body size to 10mb for bigger csv/excel uploads

--- a/nginx/nginx_local.conf
+++ b/nginx/nginx_local.conf
@@ -1,6 +1,8 @@
 events {}
 
 http {
+  client_max_body_size 10M;
+
   # HTTP Server (Port 80)
   server {
     listen 80 default_server;
@@ -8,6 +10,7 @@ http {
 
     access_log off;
     error_log off;
+    client_max_body_size 10M;
 
     # for the root location, serve via root server
     location = / {
@@ -45,6 +48,7 @@ http {
       proxy_read_timeout 120s;
       proxy_send_timeout 120s;
       keepalive_timeout 240s;
+      client_max_body_size 10M;
     }
   }
 }
