--- a/nginx/nginx_prod.conf
+++ b/nginx/nginx_prod.conf
@@ -1,6 +1,8 @@
 events {}
 
 http {
+  client_max_body_size 10M;
+
   # HTTP Server (Port 80)
   server {
     listen 80;
@@ -15,6 +17,7 @@ http {
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server;
     server_name demo.defog.ai;
+    client_max_body_size 10M;
 
     access_log off;
     error_log off;
@@ -70,6 +73,7 @@ http {
       proxy_read_timeout 120s;
       proxy_send_timeout 120s;
       keepalive_timeout 240s;
+      client_max_body_size 10M;
     }
   }
 }
