--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "^v1.2.3",
+    "@defogdotai/agents-ui-components": "^1.3.0",
     "@react-oauth/google": "^0.12.1",
     "@types/react-dom": "19.0.0",
     "@uiw/react-codemirror": "^4.23.7",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "next-remove-imports": "^1.0.12",
@@ -30,6 +31,7 @@
     "@playwright/test": "^1.47.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.11.6",
     "@types/react": "19.0.2",
     "autoprefixer": "^10.4.19",
