--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@codemirror/lang-sql": "^6.7.0",
-    "@defogdotai/agents-ui-components": "^1.3.0",
+    "@defogdotai/agents-ui-components": "^1.3.3",
     "@react-oauth/google": "^0.12.1",
     "@types/react-dom": "19.0.0",
     "@uiw/react-codemirror": "^4.23.7",
@@ -20,11 +20,12 @@
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "next-remove-imports": "^1.0.12",
-    "papaparse": "^5.4.1",
+    "papaparse": "^5.5.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sass": "^1.69.7",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "15.1.1",
@@ -33,6 +34,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.11.6",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "19.0.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.17.0",
