1. use worker for uploading files. use it at the top level. 2. remove xlsx dependency. 3. fix file uploading.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sass": "^1.69.7",
-    "tailwind-merge": "^2.3.0",
-    "xlsx": "^0.18.5"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "15.1.1",
