only do it on main

--- a/.github/workflows/frontend-build-deploy.yml
+++ b/.github/workflows/frontend-build-deploy.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
   # Run when changes are pushed to the frontend folder
   push:
+    branches: [main]
     paths:
       - "frontend/**"
 
